agregue el boton eliminar

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,11 +7,16 @@
         <a href="/addTarea" class="btn bg-success">
             <i class="bi bi-list-task"> Agregar Tarea</i>
         </a>
-    </div>
+        </div>
     <div class="d-flex">
         <a href="/" class="btn bg-primary">
             <i class="bi bi-list-task"> Mostrar Tareas</i>
         </a>
-    </div>
+        </div>
+        <div class="d-flex">
+        <a href="/" class="btn bg-danger">
+            <i class="bi bi-list-task"> Eliminar Tareas</i>
+        </a>
+        </div>
     </div>
 </nav>
